--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=42",
     "wheel",
-    "msgpack"  # 👈 build needs this to import your package
+    "msgpack",
     "cobs",
     "crc"
 ]
